# py-file-watcher

./: CHANGELOG.md  README.md  pyproject.toml
src/philiprehberger_file_watcher/: __init__.py
tests/: test_import.py
