[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-file-watcher"
version = "0.1.2"
description = "Filesystem event watcher with decorator-based callbacks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
dependencies = ["watchdog>=3.0"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-file-watcher#readme"
Repository = "https://github.com/philiprehberger/py-file-watcher"
Issues = "https://github.com/philiprehberger/py-file-watcher/issues"
Changelog = "https://github.com/philiprehberger/py-file-watcher/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_file_watcher"]
