[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-file-watcher"
version = "0.2.1"
description = "Filesystem event watcher with decorator-based callbacks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["file-watcher", "filesystem", "monitor", "events", "watch"]
dependencies = ["watchdog>=3.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-file-watcher#readme"
Repository = "https://github.com/philiprehberger/py-file-watcher"
Issues = "https://github.com/philiprehberger/py-file-watcher/issues"
Changelog = "https://github.com/philiprehberger/py-file-watcher/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_file_watcher"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
